--- a/src/index.sass
+++ b/src/index.sass
@@ -1,3 +1,11 @@
+@import sass/app
+@import sass/app-header
+@import sass/post-list
+@import sass/post-add-form
+@import sass/post-list-item
+@import sass/post-status-filter
+@import sass/search-panel
+
 body
     margin: 50px 0 0 0
     padding: 0
