--- a/src/index.sass
+++ b/src/index.sass
@@ -1,3 +1,4 @@
+@import sass/main
 @import sass/app
 @import sass/app-header
 @import sass/post-list
@@ -5,14 +6,3 @@
 @import sass/post-list-item
 @import sass/post-status-filter
 @import sass/search-panel
-
-body
-    margin: 50px 0 0 0
-    padding: 0
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif
-    -webkit-font-smoothing: antialiased
-    -moz-osx-font-smoothing: grayscale
-    background-color: #eaf5fc
-
-code
-    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace
